feat: 테스트에서 반복해서 사용되는 유효한 숫자들을 생성하는 기능을 구현해 코드의 중복을 줄여라